# python-node-editor

./: .cursorrules  .gitignore  README.md  bun.lockb  execution_profile.pstat  graph.json  package.json  pyproject.toml  rando_error.txt  timing.txt  types.ts
.cursor/: mcp.json
.github/workflows/: sync-pm4.yml
backend/: api_example.py  base_node.py  classes.py  config.py  docarray_sending_image.py  execution.py  execution_wrapper.py  graph.json  image_nodes.py  main.py  native_window.py  node.json  node_list.py  requirements.txt  shared_globals.py  sort_method.py  streaming_example.py  test_all_nodes.py  test_api.py  test_image_node.py  test_imageoutput.py  test_load_node_w_inputs.py  utils.py
backend/class_defs/: image.py
backend/datatypes/: base_node.py  basic_data.py  cachable_data.py  datamodel.py  field.py  field_data.py  field_data_utils.py  fields.py  image.py  image_data.py  named_base_model.py  old_base_node.py
backend/nodes/: experimental_nodes.py  image_nodes.py  math_nodes.py  primitives.py  (+3 more)
frontend/: bun.lockb  index.html  package-lock.json  package.json
new_package/: hello.py
recursive-rendering-test/: bun.lockb  package.json  testformat.py
testing_pydantic/: pyd_test_1.py
tests/: class_print.py  computed_field_test.py  create_ts_types.py  model_computed_fields.py  nested_inference.py  no_test_node_execution.py  test_basic_datatypes.py  test_compound_datatypes.py  test_def_args.py  test_discrimination.py  test_field.py  test_field_data.py  test_image_datatype.py  test_new_field_and_data.py  test_node_execution.py  test_node_field.py
(+242 files in other folders)
